--- a/03/main.Rnw
+++ b/03/main.Rnw
@@ -225,6 +225,36 @@ Chapter \CHAPTER: Joint Distributions}
     $$
   \end{block}
   
+  \framebreak
+  
+  \begin{itemize}
+    \item Similar results hold for interchanging summation, derivatives, and integrals.
+    \item For finite sums, changing the order of sums and derivatives is a natural property of derivatives. It's not so simple with infinite sums.
+  \end{itemize}
+  
+  \begin{block}{Exchanging summation and derivatives}
+    Suppose that $\sum_{x = 0}^\infty h(\theta,x)$ converges for all $\theta$ in an interval $(a, b)$, and $(i)$ $\frac{\partial}{\partial \theta} h(\theta, x)$ is continuous in $\theta$ for each $x$, and $(ii)$ $\sum_{x = 0}^\infty \frac{\partial}{\partial \theta} h(\theta, x)$ converges uniformly on every closed bounded subinterval of $(a, b)$. Then
+    $$
+    \frac{d}{d\theta} \sum_{x = 0}^\infty h(\theta, x) = \sum_{x = 0}^\infty \frac{\partial}{\partial \theta} h(\theta, x).
+    $$
+  \end{block}
+  
+  \begin{itemize}
+    \item The necessary conditions stated above will hold for nearly all functions we'll consider in this class. You won't be asked to verify these conditions.
+  \end{itemize}
+  
+  \begin{block}{Exchaning sums and integrals}
+    Suppose the series $\sum_{x = 0}^\infty h(\theta, x)$ converges uniformly on $[a, b]$ and that, for each $x$, $h(\theta, x)$ is a continuous function of $\theta$. Then
+    $$
+    \int_{a}^{b} \sum_{x = 0}^\infty h(\theta, x)\, d\theta = \sum_{x = 0}^\infty \int_{a}^b h(\theta, x)\, d\theta.
+    $$
+  \end{block}
+  
+  \begin{itemize}
+    \item Like with differentiation, we can always exchange the order of summation and integration, if the sums are finite.
+    \item You will not be asked to verify the conditions above, but I wanted to point out that these operations are theoretically supported when they inevitibly come up in this class. 
+  \end{itemize}
+  
   % TODO: Add example 2.4.5, but don't talk about expectation yet. In fact, maybe this needs to move to Chapter~4? 
   % TODO: Add stuff about partial derivatives, multiple integrals, and at least talk about polar coordinates. 
   
@@ -243,6 +273,8 @@ Chapter \CHAPTER: Joint Distributions}
   %    
   % \end{itemize}
 \end{frame}
+
+\section{Joint Probabilities}
 
 \begin{frame}[allowframebreaks]{Joint cdf}
   \begin{itemize}
